Show krunner on active output on Wayland

QCursor::pos does not work under Wayland. So use active output from KWin to
determine startup screen. This will also honor the 'Active screen follows
mouse' option from Window Behavior (also under X11).

Depends on KWin merge request https://invent.kde.org/plasma/kwin/-/merge_requests/2209

BUG: 427069
FIXED-IN: 5.25